--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.2",
+    "@types/react": "^18.0.28",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
     "expo-linking": "~4.0.1",
@@ -23,7 +25,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@types/react-native": "^0.71.4",
+    "typescript": "^4.9.4"
   },
   "resolutions": {
     "metro": "^0.73.7",
